[project]
name = "basic-langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastembed>=0.7.3",
    "flashrank>=0.2.10",
    "gradio>=5.49.1",
    "huggingface-hub[hf-xet]>=0.35.3",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langchain-qdrant>=0.2.1",
    "langchain-text-splitters>=0.3.11",
    "langchain[google-genai,openai]>=0.3.27",
    "langgraph>=0.6.10",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.0",
]
